<resources>
    <string name="app_name">LeaveApplication</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="password_hint">Password</string>
    <string name="Login">Login</string>
    <string name="Signin">Sign In</string>
    <string name="User_name_hint">User name</string>
    <string name="SignInHere">Sign Up Here</string>
    <string name="Welcome">Welcome</string>
    <string name="Super">Supervisor</string>
    <string name="Employee">Employee</string>
    <string name="SignUp">Sign Up</string>
    <string name="EmpId">Employee ID</string>
    <string name="Name">Employee Name</string>
    <string name="ConfPass">Confirm Password</string>
    <string name="Email">Email Address</string>
    <string name="Username">Choose a Usename</string>
    <string name="Fillup">Fill Up The Details</string>
    <string name="From">From:</string>
    <string name="To">To:</string>
    <string name="Specify_Reason">Specify Reason</string>
    <string name="Select_Date">Select Date</string>
    <string name="type_prompt">Leave type:</string>
    <string name="pending">Leaves Pending for Approval</string>
    <string name="logout">Log Out</string>
    <string name="update">Update</string>
    <string-array name="leave_type">
        <item>Casual leave</item>
        <item>Sick leave</item>
        <item>Earned leave</item>
    </string-array>

</resources>
