<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content"
    android:background="@drawable/signup">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/Fillup"
            android:textSize="20dp"/>

        <EditText
            android:id="@+id/Uname"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView1"
            android:layout_centerHorizontal="true"
            android:layout_margin="15dp"
            android:ems="10"
            android:hint="@string/Username" />

        <EditText
            android:id="@+id/EmpId"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Uname"
            android:layout_centerHorizontal="true"
            android:ems="10"
            android:hint="@string/EmpId"
            android:inputType="number"
            android:layout_margin="15dp"/>

        <EditText
            android:id="@+id/Name"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/EmpId"
            android:layout_centerHorizontal="true"
            android:ems="10"
            android:hint="@string/Name"
            android:layout_margin="15dp"/>

        <EditText
            android:id="@+id/Email"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Name"
            android:layout_centerHorizontal="true"
            android:ems="10"
            android:hint="@string/Email"
            android:inputType="textEmailAddress"
            android:layout_margin="15dp"/>

        <TextView
            android:id="@+id/Role"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/Email"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:text="Select Role"
            android:typeface="sans" />

        <RadioGroup
            android:id="@+id/rdbttnGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="30dp"
            android:layout_below="@+id/Role">

            <RadioButton
                android:id="@+id/rdbttnEmp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/Employee" />

            <RadioButton
                android:id="@+id/rdbttnSuper"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Super" />

        </RadioGroup>

        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/rdbttnGroup"
            android:layout_margin="20dp"
            android:visibility="visible" >
        </Spinner>

        <EditText
            android:id="@+id/Pass"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/spinner1"
            android:layout_centerHorizontal="true"
            android:ems="10"
            android:hint="@string/password_hint"
            android:layout_margin="15dp"
            android:inputType="textPassword"/>

        <EditText
            android:id="@+id/ConfPass"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Pass"
            android:layout_centerHorizontal="true"
            android:ems="10"
            android:hint="@string/ConfPass"
            android:layout_margin="15dp"
            android:inputType="textPassword"/>

        <Button
            android:id="@+id/bttnSignUp"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ConfPass"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="20dp"
            android:background="#2b547e"
            android:padding="10dp"
            android:text="@string/SignUp"
            android:textColor="#fff"
            android:textSize="20sp"
            android:typeface="sans" />

    </RelativeLayout>

</ScrollView>